# xarray-fits

./: .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tbump.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
.travis/: pep8.docker  python2.docker  python35.docker  python36.docker
docs/: .gitignore  Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
docs/source/: api.rst  conf.py  index.rst  usage.rst
tests/: test_axes.py  test_grid.py  test_xarrayfits.py
xarrayfits/: __init__.py  axes.py  fits.py  fits_proxy.py  grid.py  typing.py  utils.py
