[tool.poetry]
name = "xarray-fits"
version = "0.2.3"
description = "xarray Datasets for FITS-like data"
authors = ["Simon Perkins <simon.perkins@gmail.com>"]
packages = [{include = "xarrayfits"}]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
astropy = "^6.0.0"
dask = {extras = ["array"], version = "^2024.3.1"}
xarray = "^2024.2.0"
pytest = {version = "^8.1.1", optional = true, extras = ["testing"]}
distributed = {version = "^2024.3.1", optional = true, extras = ["testing"]}
fsspec = "^2024.3.0"

[tool.poetry.extras]
testing = ["distributed", "pytest"]

[tool.poetry.group.dev.dependencies]
tbump = "^6.9.0"
pre-commit = "^2.20.0"
ruff = "^0.1.3"

[tool.ruff]
line-length = 88
target-version = "py310"

select = [
    # flake8-builtins
    "A",
    # flake8-bugbear
    "B",
    # isort
    "I001",
    "I002",
    # tidy imports
    "TID"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
