[project]
name = "xarray-fits"
version = "0.2.5"
description = "xarray Datasets for FITS-like data"
authors = [{name = "Simon Perkins", email = "simon.perkins@gmail.com"}]
readme = "README.rst"
requires-python = ">=3.11"
dependencies = [
    "astropy",
    "dask[array]",
    "xarray",
    "fsspec",
]

[project.optional-dependencies]
testing = [
    "pytest",
    "distributed",
]
dev = [
    "tbump>=6.9.0,<7",
    "pre-commit>=2.20.0,<3",
    "ruff>=0.1.3,<0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xarrayfits"]

[tool.ruff]
line-length = 88
target-version = "py310"

select = [
    # flake8-builtins
    "A",
    # flake8-bugbear
    "B",
    # isort
    "I001",
    "I002",
    # tidy imports
    "TID"
]

extend-select = ["I"]
